# LG4X-V2

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  bumpver.toml  config.ini  dfjks  elements.csv  pyproject.toml  requirements.txt
.github/workflows/: jekyll-gh-pages.yml  jekyll.yml
CrossSections/: cross_sections.csv
Databases/: elements.csv  lg4x-v2-univers.db  xps_data.csv
Databases/CrossSections/: cross_sections.csv
Example/: 0-150W_NiWC1s_C1s.txt  0-150W_NiWNi2p_Ni2p.txt  0-150W_NiWO1s_O1s.txt  0-150W_NiWW4f_W4f.txt  0-150W_NiWwide_wide.txt  Mutlipak_vms_SampleID1BlockNo1_C1s.txt  Mutlipak_vms_SampleID1BlockNo2_O1s.txt  Mutlipak_vms_SampleID1BlockNo3_S2p.txt  Mutlipak_vms_SampleID1BlockNo4_N1s.txt  Mutlipak_vms_SampleID1BlockNo5_Mo3d.txt
Logs/: app.log.1  app.log.2  app.log.3  app.log.4  app.log.5
Python/: database_handler.py  generate_elems_csv.py  gui_helpers.py  helpers.py  main.py  main_old.py  parameter_test.py  periodictable.py  periodictableui.py  usrmodel.py  vamas.py  vamas_export.py  xpspy.py
config/: config.ini
data/: io.github.julian_hochhaus.LG4X_V2.desktop  io.github.julian_hochhaus.LG4X_V2.metainfo.xml
docs/: .readthedocs.yaml  Gemfile  _config.yml  about.rst  citations.rst  conf.py  guide.markdown  index.markdown  lineshapes.rst  note.rst  requirements.txt  setup.markdown  static_backgrounds.rst
docs/_build/doctrees/: about.doctree  backgrounds.doctree  citations.doctree  contribution.doctree  environment.pickle  index.doctree  introduction.doctree  lineshapes.doctree  note.doctree  static_backgrounds.doctree
docs/_build/html/: .buildinfo  about.html  backgrounds.html  citations.html  contribution.html  genindex.html  index.html  introduction.html  lineshapes.html  note.html  objects.inv  search.html  searchindex.js  static_backgrounds.html
docs/_build/html/_sources/: about.rst.txt  backgrounds.rst.txt  contribution.rst.txt  index.rst.txt  introduction.rst.txt
docs/_posts/: 2022-05-06-first-commit copy.markdown  2022-05-06-first-commit.markdown  2023-03-30-welcome-to-jekyll.markdown
docs/_site/: 404.html  feed.xml  index.html
docs/_site/jekyll/update/2023/03/30/: welcome-to-jekyll.html
docs/_site/pages/about/: index.html
docs/_site/pages/guide/: index.html
docs/_site/pages/setup/: index.html
docs/pages/: about.markdown  about.md  backgrounds.md  bugs.md  guide.markdown  guide.md  models.md  setup.markdown  setup.md  versions.md
lg4x/: main.py  vamas.py
lg4x.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: 210310_highres_Au_Sn_12min_12w_Au4f_180_0G_01_0_0_fit.csv  210310_highres_Au_Sn_12min_12w_Au4f_180_0G_01_0_0_fit.txt  FK.csv  Highres_Au4f_hv_180_testfile.csv  Survey_Au_hv_700.csv
