# pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name='LG4X-V2'
readme='README.md'
version = "2.4.3"
authors=[{name='Julian Hochhaus', email='julian.hochhaus@tu-dortmund.de'}, {name='Julian Hochhaus', email='julian.hochhaus@tu-dortmund.de'}]
license={file='LICENSE', name='MIT'}
description='A graphical user interface for X-ray photoemission spectroscopy (XPS) curve fitting analysis/ X-ray absorption spectroscopy (XAS) analysis. The curve fitting is done using the LMFIT and lmfitxps packages.'

[project.urls]
homepage='https://github.com/Julian-Hochhaus/lmfitxps'
documentation='https://lmfitxps.readthedocs.io/en/latest/'

[tool.setuptools.packages.find]
where = ["."]
include = ["lg4x*", "Python*"]
